Fix fonts on mobile navigation

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,10 @@ a {
     font-family: 'Gotham Rounded Book' !important;
 }
 
+.Mobile-overlay-nav-item a{
+    font-family: 'Gotham Rounded Book' !important;
+}
+
 h3 {
     font-family: 'Gotham Rounded Book' !important;
 }
